# techpark_hw

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/: consistent_search.h  parallel_search.h  schedule.h  workers.h
src/: consistent_search.c  main.c  parallel_search.c  schedule.c  tests.cpp  workers.c
tests/: gtests.cpp  stress_test.c
